On Aug, 18 major zlib version released - 1.3
tarballs prior to that version are no longer fetchable from https://zlib.net.
Switch to github tarballs until its fine to update to zlib-1.3.

--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -59,7 +59,7 @@ sources:
           url: https://cdn.kernel.org/pub/software/scm/git/git-{version}.tar.xz
       - zlib:
           version: 1.2.13
-          url: https://zlib.net/zlib-{version}.tar.gz
+          url: https://github.com/madler/zlib/releases/download/v{version}/zlib-{version}.tar.gz
       - perl:
           version: 5.32.0
           url: https://www.cpan.org/src/5.0/perl-{version}.tar.gz
