Update repository URLs to GitHub and adjust configurations
Replaced outdated Bitbucket and funtoo.org URLs with updated GitHub-based URLs across multiple files for consistency and reliability. Adjusted `GENTOO_MIRRORS` and added `sync_base_url` in `fchroot.yaml` to support the new repository locations. These changes ensure better connectivity and maintain updates from the new source locations.

--- a/ci/mottainai/mottainai-ubuntu-21.10-powerpc-64bit.yaml
+++ b/ci/mottainai/mottainai-ubuntu-21.10-powerpc-64bit.yaml
@@ -12,5 +12,5 @@ environment:
 - LUET_NOLOCK=true
 - LUET_YES=true
 image: ubuntu/21.10
-source: https://code.funtoo.org/bitbucket/scm/core/ffs.git
+source: https://github.com/funtoo-src/ffs.git
 type: lxd
