--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -145,7 +145,7 @@ fchroot:
         FEATURES="-pid-sandbox"
         FETCHCOMMAND="wget --no-check-certificate -t 3 -T 60 --passive-ftp -O \"\${DISTDIR}/\${FILE}\" \"\${URI}\""
         RESUMECOMMAND="wget --no-check-certificate -c -t 3 -T 60 --passive-ftp -O \"\${DISTDIR}/\${FILE}\" \"\${URI}\""
-        GENTOO_MIRRORS=https://direct.funtoo.org
+        GENTOO_MIRRORS=https://direct-github.funmore.org
         MKCF_EOF
         ln -sf portage/make.conf /etc/make.conf
         install -d /etc/portage/make.profile
@@ -169,6 +169,7 @@ fchroot:
         cat > /etc/ego.conf << "EGO_EOF"
         [global]
         release = next
+        sync_base_url=https://github.com/funtoo-repo/{repo}
         EGO_EOF
         install -d /var/db/pkg/app-admin/ego-${EGO_VERSION}
         GIT_SSL_NO_VERIFY=true ego sync
