--- a/ci/mottainai/mottainai-funtoo-musl-powerpc-64bit-fchroot.yaml
+++ b/ci/mottainai/mottainai-funtoo-musl-powerpc-64bit-fchroot.yaml
@@ -14,6 +14,6 @@ environment:
 - LUET_NOLOCK=true
 - LUET_YES=true
 image: funtoo/bootstrap-builder
-source: https://code.funtoo.org/bitbucket/scm/core/ffs.git
+source: https://github.com/funtoo-src/ffs.git
 type: lxd
 directory: /
