--- a/profiles/musl/sources.yaml
+++ b/profiles/musl/sources.yaml
@@ -107,13 +107,13 @@ sources:
           url: https://www.openssl.org/source/openssl-{version}.tar.gz
       - pax-utils:
           version: 1.3.4
-          url: https://gitweb.gentoo.org/proj/pax-utils.git/snapshot/pax-utils-{version}.tar.bz2
+          url: https://github.com/gentoo/pax-utils/archive/refs/tags/v{version}.tar.gz
       - sandbox:
           version: 3.1
-          url: https://gitweb.gentoo.org/proj/sandbox.git/snapshot/sandbox-{version}.tar.bz2
+          url: https://github.com/gentoo/sandbox/archive/refs/tags/v{version}.tar.gz
       - portage:
           version: 3.0.30
-          url: https://gitweb.gentoo.org/proj/portage.git/snapshot/portage-{version}.tar.bz2
+          url: https://github.com/gentoo/portage/archive/refs/tags/portage-{version}.tar.gz
           patches:
             - portage-3.0.29-remove-gentoo-repos-conf.patch
             - portage-2.3.68-change-global-paths.patch
