--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -115,7 +115,7 @@ sources:
           version: 2.24
           url: https://github.com/gentoo/sandbox/archive/refs/tags/v{version}.tar.gz
       - portage:
-          version: 3.0.14-r10
+          version: 3.0.14
           url: https://github.com/gentoo/portage/archive/refs/tags/portage-{version}.tar.gz
           patches:
             - portage-2.4.3-remove-gentoo-repos-conf.patch
