Update portage source configuration in sources.yaml
Added the `srcdir` field for the portage source configuration. This change specifies the directory name for the source and improves clarity in handling the package source. No functionality is altered with this update.

--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -116,6 +116,7 @@ sources:
           url: https://github.com/gentoo/sandbox/archive/refs/tags/v{version}.tar.gz
       - portage:
           version: 3.0.14
+          srcdir: portage-portage-3.0.14
           url: https://github.com/gentoo/portage/archive/refs/tags/portage-{version}.tar.gz
           patches:
             - portage-2.4.3-remove-gentoo-repos-conf.patch
