--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -4,33 +4,33 @@ sources:
       url: https://ftp.gnu.org/gnu/{name}/{name}-{version}.tar.{ext}
       ext: xz
     packages:
-      - autoconf: 2.69
-      - automake: 1.15.1
+      - autoconf: 2.72
+      - automake: 1.16.5
       - libtool: 2.4.6
-      - binutils: 2.38
-      - mpfr: 4.1.0
-      - gmp: 6.2.1
+      - binutils: 2.40
+      - mpfr: 4.2.1
+      - gmp: 6.3.0
       - mpc:
-          version: 1.2.1
+          version: 1.3.1
           ext: gz
       - gcc:
           url: https://ftp.gnu.org/gnu/{name}/{name}-{version}/{name}-{version}.tar.{ext}
-          version: 11.2.0
+          version: 12.3.0
       - glibc: 2.33
       - ncurses:
-          version: 6.3
+          version: 6.5
           ext: gz
       - bash:
-          version: 5.1.16
+          version: 5.2.37
           ext: gz
-      - bison: 3.4.1
-      - coreutils: 9.1
-      - diffutils: 3.7
-      - findutils: 4.8.0
+      - bison: 3.8.2
+      - coreutils: 9.6
+      - diffutils: 3.11
+      - findutils: 4.10.0
       - gawk: 5.1.0
-      - gettext: 0.21
-      - grep: 3.6
-      - gzip: "1.10"
+      - gettext: 0.24
+      - grep: 3.11
+      - gzip: "1.13"
       - make:
           version: 4.2.1
           patches:
@@ -42,12 +42,12 @@ sources:
       - m4:
           version: 1.4.19
       - patch: 2.7.6
-      - sed: 4.8
-      - tar: 1.34
-      - texinfo: 6.7
-      - nano: 6.3
+      - sed: 4.9
+      - tar: 1.35
+      - texinfo: 7.2
+      - nano: 8.3
       - wget:
-          version: 1.21.3
+          version: 1.25.0
           ext: gz
   non-gnu:
     packages:
@@ -55,10 +55,10 @@ sources:
           version: "5.10"
           url: https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-{version}.tar.xz
       - git:
-          version: 2.36.1
+          version: 2.48.1
           url: https://cdn.kernel.org/pub/software/scm/git/git-{version}.tar.xz
       - zlib:
-          version: 1.2.13
+          version: 1.3.1
           url: https://github.com/madler/zlib/releases/download/v{version}/zlib-{version}.tar.gz
       - perl:
           version: 5.32.0
@@ -70,49 +70,49 @@ sources:
           version: 0.12.0
           url: https://github.com/libcheck/check/releases/download/{version}/check-{version}.tar.gz
       - file:
-          version: 5.42
+          version: 5.46
           url: http://ftp.astron.com/pub/file/file-{version}.tar.gz
       - rsync:
-          version: 3.2.4
+          version: 3.4.1
           url: https://download.samba.org/pub/rsync/src/rsync-{version}.tar.gz
       - util-linux:
-          version: 2.38
+          version: 2.40.4
           url: https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.38/util-linux-{version}.tar.gz
       - xz-utils:
-          version: 5.2.5
+          version: 5.6.4
           url: https://tukaani.org/xz/xz-{version}.tar.gz
           srcdir: xz-{version}
       - zstd:
-          version: 1.5.2
+          version: 1.5.7
           url: https://github.com/facebook/zstd/releases/download/v{version}/zstd-{version}.tar.gz
       - which:
           version: 2.21
           url: https://carlowood.github.io/which/which-{version}.tar.gz
       - pkgconf:
-          version: 1.5.4
+          version: 2.2.0
           url: https://distfiles.ariadne.space/pkgconf/pkgconf-{version}.tar.xz
       - python:
-          version: 3.9.13
+          version: 3.9.21
           url: https://www.python.org/ftp/python/{version}/Python-{version}.tar.xz
           srcdir: Python-{version}
       - cmake:
-          version: 3.19.7
+          version: 3.24.1
           url: https://github.com/Kitware/CMake/releases/download/v{version}/cmake-{version}.tar.gz
       - libffi:
           version: 3.3-rc0
           url: https://github.com/libffi/libffi/releases/download/v{version}/libffi-{version}.tar.gz
       - curl:
-          version: 7.83.1
+          version: 8.12.1
           url: https://github.com/curl/curl/releases/download/curl-7_83_1/curl-{version}.tar.bz2
       - openssl:
-          version: 1.1.1n
+          version: 1.1.1q
           url: https://www.openssl.org/source/openssl-{version}.tar.gz
       - pax-utils:
-          version: 1.2.4
+          version: 1.3.8
           url: https://github.com/gentoo/pax-utils/archive/refs/tags/v{version}.tar.gz
 
       - sandbox:
-          version: 2.24
+          version: 2.39
           url: https://github.com/gentoo/sandbox/archive/refs/tags/v{version}.tar.gz
       - portage:
           version: 3.0.14
@@ -132,5 +132,5 @@ sources:
             - portage-3.0.14-aliases-name-check.patch
             - portage-3.0.14-cdn-feature-ignore-mirror.patch
       - ego:
-          version: 2.8.6
+          version: 2.8.7
           url: https://github.com/funtoo-src/ego/archive/refs/tags/{version}.tar.gz
