Update glibc configuration with localealias patch
Refactor glibc version definition to object format and add `glibc-localealias.patch` to the patches list. Renamed the patch file to align with glibc conventions. This ensures proper handling of locale alias functionality in glibc.

--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -16,7 +16,10 @@ sources:
       - gcc:
           url: https://ftp.gnu.org/gnu/{name}/{name}-{version}/{name}-{version}.tar.{ext}
           version: 12.3.0
-      - glibc: 2.33
+      - glibc:
+          version: 2.33
+          patches:
+            - glibc-localealias.patch
       - ncurses:
           version: 6.5
           ext: gz
