Update library paths for GMP, MPFR, and MPC in tools.yaml
Modified configuration flags to use `${CLFS}/usr/include` for GMP, MPFR, and MPC instead of `${CLFS}/usr`. This ensures the correct include paths are used during the build process, preventing potential misconfigurations or build failures.

--- a/profiles/gnu/steps/tools.yaml
+++ b/profiles/gnu/steps/tools.yaml
@@ -114,9 +114,9 @@ tools:
         --enable-install-libiberty \
         --disable-libstdcxx-pch \
         --disable-libsanitizer \
-        --with-mpfr=${CLFS}/usr \
-        --with-gmp=${CLFS}/usr \
-        --with-mpc=${CLFS}/usr
+        --with-mpfr=${CLFS}/usr/include \
+        --with-gmp=${CLFS}/usr/include \
+        --with-mpc=${CLFS}/usr/include
         make AS_FOR_TARGET="${AS}" \
         LD_FOR_TARGET="${LD}"
         make DESTDIR=${CLFS} install
