Add custom LDFLAGS, CFLAGS, and CXXFLAGS for GCC build
This ensures the proper inclusion of CLFS library paths and headers during the GCC configuration process. It addresses potential issues related to missing dependencies or incorrect linkage on certain architectures.

--- a/profiles/gnu/steps/tools.yaml
+++ b/profiles/gnu/steps/tools.yaml
@@ -94,6 +94,9 @@ tools:
         sed -i 's|^RAW_CXX_FOR_TARGET="$CXX_FOR_TARGET|& -nostdinc++|' configure
         mkdir gcc-build && cd gcc-build
         ../configure \
+        LDFLAGS="-Wl,-rpath,${CLFS}/lib -Wl,-rpath-link,${CLFS}/lib" \
+        CFLAGS="-I${CLFS}/usr/include" \
+        CXXFLAGS="-I${CLFS}/usr/include" \
         {%- if arch == "powerpc" %}
         --with-abi=elfv2 \
         --enable-secureplt \
