Add custom LDFLAGS with libncursesw, CFLAGS, and CXXFLAGS for Bash build
This ensures the proper inclusion of CLFS library paths and headers during the Bash configuration process. It addresses potential issues related to missing dependencies or incorrect linkage on certain architectures.

--- a/profiles/gnu/steps/tools.yaml
+++ b/profiles/gnu/steps/tools.yaml
@@ -178,6 +178,9 @@ tools:
         gt_cv_int_divbyzero_sigfpe=yes
         BASH_EOF
         ./configure \
+        LDFLAGS="-L${CLFS}/usr/lib -lncursesw -Wl,-rpath,${CLFS}/usr/lib -Wl,-rpath-link,${CLFS}/usr/lib" \
+        CFLAGS="-I${CLFS}/usr/include" \
+        CXXFLAGS="-I${CLFS}/usr/include" \
         --prefix=/usr \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
