--- a/profiles/gnu/sources.yaml
+++ b/profiles/gnu/sources.yaml
@@ -33,12 +33,9 @@ sources:
       - grep: 3.11
       - gzip: "1.13"
       - make:
-          version: 4.2.1
+          version: 4.4.1
           patches:
-            - make-4.2.1-perl526.patch
-            - make-4.2.1-glob-v2.patch
-            - make-4.2.1-glob-internals.patch
-            - make-4.2.1-pselect-non-blocking.patch
+            - make-4.4-default-cxx.patch
           ext: gz
       - m4:
           version: 1.4.19
