Update util-linux build configuration to disable liblastlog2
Added the `--disable-liblastlog2` flag to the util-linux build process. This ensures the exclusion of liblastlog2 during compilation for compatibility and reduced dependencies.

--- a/profiles/gnu/steps/tools.yaml
+++ b/profiles/gnu/steps/tools.yaml
@@ -399,7 +399,8 @@ tools:
         --without-systemd \
         --without-systemdsystemunitdir \
         --disable-pylibmount \
-        --without-python
+        --without-python \
+        --disable-liblastlog2  
         make
         make DESTDIR=${CLFS} install
         install -d ${CLFS}/var/db/pkg/sys-apps/util-linux-${UTIL_LINUX_VERSION}
