Set LDFLAGS and CFLAGS in tools build configuration
Added LDFLAGS and CFLAGS variables to the build configuration to specify library and include paths. This ensures proper linkage and compilation during the build process by referencing the correct directories in the CLFS environment.

--- a/profiles/gnu/steps/tools.yaml
+++ b/profiles/gnu/steps/tools.yaml
@@ -377,6 +377,8 @@ tools:
         NCURSES6_CONFIG=" " \
         NCURSESW5_CONFIG=" " \
         NCURSES5_CONFIG=" " \
+        LDFLAGS="-L${CLFS}/usr/lib -Wl,-rpath=${CLFS}/usr/lib -Wl,-rpath-link=${CLFS}/usr/lib" \
+        CFLAGS="-I${CLFS}/usr/include" \
         ./configure \
         --prefix=/usr \
         --build=${CLFS_HOST} \
