--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -70,6 +70,7 @@ fchroot:
         ./configure \
         --prefix=/usr \
         --with-openssl \
+        --without-libpsl
         --disable-static
         make
         make install
