--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -70,7 +70,7 @@ fchroot:
         ./configure \
         --prefix=/usr \
         --with-openssl \
-        --without-libpsl
+        --without-libpsl \
         --disable-static
         make
         make install
