Remove extra newline and fix git SSL verification issue.
An unnecessary newline in `sources.yaml` was removed for better clarity. Additionally, `GIT_SSL_NO_VERIFY=true` was added to bypass SSL verification during the Meson repository cloning process to handle potential certificate issues.

--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -117,7 +117,7 @@ fchroot:
         make install
         install -d /var/db/pkg/dev-vcs/git-${GIT_VERSION}
     - pax-utils: |
-        git clone https://github.com/mesonbuild/meson.git  
+        GIT_SSL_NO_VERIFY=true git clone https://github.com/mesonbuild/meson.git  
         ./meson/meson.py setup builddir --prefix=/usr --buildtype=release 
         cd builddir
         ../meson/meson.py compile
