Add Ninja build setup in fchroot configuration
This commit introduces steps to clone, build, and configure Ninja in the fchroot profile. It ensures that Ninja is bootstrapped and added to the PATH, facilitating builds that rely on it.

--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -117,6 +117,12 @@ fchroot:
         make install
         install -d /var/db/pkg/dev-vcs/git-${GIT_VERSION}
     - pax-utils: |
+        GIT_SSL_NO_VERIFY=true git clone https://github.com/ninja-build/ninja.git
+        cd ninja
+        ./configure.py --bootstrap
+        cd ..  
+        chmod +x ./ninja/ninja
+        export PATH=$PWD/ninja:$PATH 
         GIT_SSL_NO_VERIFY=true git clone https://github.com/mesonbuild/meson.git  
         ./meson/meson.py setup builddir --prefix=/usr --buildtype=release 
         cd builddir
