Add sys-libs/ncurses to stage1 dependencies
Added ncurses as a required dependency in stage1 to ensure proper functionality of components relying on terminal handling. This change improves compatibility and prevents potential runtime issues.

--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -49,6 +49,7 @@ fchroot:
           app-arch/tar
           app-arch/xz-utils
           app-admin/eselect
+          sys-libs/ncurses
           app-shells/bash
           net-misc/rsync
           net-misc/wget
