Add ncurses to fchroot and remove from stage1 dependencies
Moved ncurses installation from stage1 to fchroot to better align with build requirements. This ensures it is available at the appropriate step without redundancy.

--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -219,6 +219,7 @@ fchroot:
         # when the lib isn't found:
 
         emerge --jobs=3 util-linux
+        emerge --jobs=3 ncurses
         emerge --jobs=3 bash gcc
         gcc-config 1
 
