--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -15,14 +15,14 @@ fchroot:
 
         export ROOT=/tmp/stage1root
         rm -rf $ROOT
-        mkdir -p $ROOT/sbin
-        mkdir -p $ROOT/usr/sbin
-        mkdir -p $ROOT/bin
-        mkdir -p $ROOT/usr/bin
+        install -m 0755 -d $ROOT/bin
         install -m 0755 -d $ROOT/sbin
         install -m 0755 -d $ROOT/usr/sbin
-        install -m 0755 -d $ROOT/bin
         install -m 0755 -d $ROOT/usr/bin
+        unlink $ROOT/bin 
+        unlink $ROOT/sbin 
+        mkdir -p $ROOT/bin
+        mkdir -p $ROOT/sbin
         # also fix a lib issue -- did I miss some steps from metro?
         install -m 0755 -d $ROOT/lib64
         ln -sf lib64 $ROOT/lib
