Add nano and virtual/editor to stage1 dependencies
These additions ensure that a default text editor is available in stage1, improving usability and meeting expected system requirements. This change aligns with standard practices for providing essential tools in base environments.

--- a/profiles/gnu/steps/stage1.yaml
+++ b/profiles/gnu/steps/stage1.yaml
@@ -78,7 +78,9 @@ fchroot:
           sys-devel/make
           sys-devel/patch
           sys-libs/pam
+          app-editors/nano
           virtual/libc
+          virtual/editor
           virtual/os-headers
           virtual/package-manager
           sys-apps/openrc
